# libspicy_spirits

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/nro/: Cargo.toml
api/nro/src/: imports.rs  lib.rs  system.rs  util.rs  vars.rs
api/src/: imports.rs  lib.rs  rulesets.rs  spirits.rs  vars.rs
example-plugin/: Cargo.toml
example-plugin/romf/: note.txt
example-plugin/src/: lib.rs
example-plugin/src/spirit_scripts/: mod.rs  smoky_progg.rs
plugin/: Cargo.toml
plugin/src/: common.rs  fighter.rs  hook.rs  imports.rs  lib.rs  spirit_battles.rs  vars.rs
plugin/src/spirit_scripts/: mod.rs  smoky_progg.rs
src/: common.rs  lib.rs  spirits.rs  system.rs  util.rs  vars.rs
src/dev/: mod.rs
src/devhook/: mod.rs
