[package]
name = "spicy_spirits"
version = "1.2.0"
authors = ["C# <@CSharpM7>"]
edition = "2018"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
lazy_static = "1.4.0"
#once_cell = "1.12.0"
parking_lot = "0.11.2"