[package]
name = "spirits_nickspirits"
version = "1.0.0"
authors = ["C# <@CSharpM7>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
sharpsmashlinesuite = { path = "../../../SharpSmashlineSuite" }
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api"}
skyline-web = { git = "https://github.com/skyline-rs/skyline-web" }
#lazy_static = "1.4.0"
#once_cell = "1.12.0"
#parking_lot = "0.11.2"
spicy_spirits = { path = "../api" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1

[features]
dev = []
devhook = []